# firtree

./: .bzrignore  CMakeLists.txt  INSTALL-OSX.txt  LICENSE  Makefile  README.txt  builtins-desc.txt  firtree.abs  firtree.lim  firtree.pim  firtree.sty  kernelcompile.cc  kernelparse.c  llvmexpout.cc  llvmout.cc  llvmout.h  llvmout_priv.h  llvmutil.cc  llvmutil.h  testkernel.knl
bindings/: CMakeLists.txt  firtree.i
bindings/python/: CMakeLists.txt  firtree-affine-transform.override  firtree-buffer-sampler.override  firtree-cairo-surface-sampler.override  firtree-cairo-types.defs  firtree-cairo.defs  firtree-clutter-types.defs  firtree-clutter.defs  firtree-cogl-texture-sampler.override  firtree-core-types.defs  firtree-core.defs  firtree-cpu-engine.override  firtree-debug.override  firtree-engine-cpu-types.defs  firtree-engine-cpu.defs  firtree-gdk-pixbuf-types.defs  firtree-gdk-pixbuf.defs  firtree-kernel-sampler.override  firtree-kernel.defs  firtree-kernel.override  firtree-overriden.defs  firtree-pixbuf-sampler.override  firtree-sampler.override  firtree-types.defs  firtree.defs  firtree.generated.defs  firtree.override  firtreemodule.c  update_defs.sh
common/: CMakeLists.txt  common.cpp  common.h  lock-free.c  lock-free.h  system-info.c  system-info.h  threading.c  threading.h  uuid.cpp  uuid.h
compiler/: CMakeLists.txt  compiler.cpp  kernel.cpp  main.cpp  math.cpp
compiler/backends/: CMakeLists.txt  utils.cpp  utils.h
compiler/backends/glsl/: CMakeLists.txt  glsl.cpp  glsl.h  glutil.cpp  glutil.h
compiler/backends/irdump/: CMakeLists.txt  irdump.cpp  irdump.h
compiler/frontend/: CMakeLists.txt  glsl-compiler.cpp  glsl-compiler.h
compiler/include/: blob.h  compiler.h  kernel.h  main.h  math.h  opengl.h  platform.h.in
compiler/runtime/glsl/: glsl-runtime-priv.h  glsl-runtime.cpp  glsl-runtime.h
doc/: CMakeLists.txt  doxy.config.in
doc/internal/: CMakeLists.txt  doxy.config.in
doc/public/: CMakeLists.txt
examples/simple-glsl/: CMakeLists.txt  common.cpp  common.h  main.cpp
firtree/: CMakeLists.txt  blob.cpp  firtree-affine-transform.c  firtree-affine-transform.h  firtree-buffer-sampler.cc  firtree-buffer-sampler.h  firtree-cairo-surface-sampler.cc  firtree-cairo-surface-sampler.h  firtree-cogl-texture-sampler.cc  firtree-cogl-texture-sampler.h  firtree-debug.cc  firtree-debug.h  firtree-engine.cc  firtree-image-sampler.cc  firtree-image-sampler.h  firtree-image.c  firtree-image.h  firtree-kernel-priv.hh  firtree-kernel-priv.hpp  firtree-kernel-sampler.cc  firtree-kernel-sampler.h  firtree-kernel.cc  firtree-kernel.h  firtree-lock-free-set.c  firtree-lock-free-set.h  firtree-pixbuf-sampler.cc  firtree-pixbuf-sampler.h  firtree-sampler-priv.hh  firtree-sampler.c  firtree-sampler.cc  firtree-sampler.h  firtree-type-builtins.c.template  firtree-type-builtins.h.template  firtree-types.h  firtree-vector.c  firtree-vector.h  firtree.h  firtree.h.in  firtree.pc.in  image-int.cpp  (+7 more)
firtree/compiler/: CMakeLists.txt  builtins.h
firtree/compiler/llvm-code-gen/: CMakeLists.txt  compiler.cc  compiler.h  llvm_compiled_kernel.cc  llvm_emit_binop_arith.cc  llvm_emit_binop_assign.cc  llvm_emit_binop_cmp.cc  llvm_emit_binop_logic.cc  (+18 more)
firtree/engines/: CMakeLists.txt
firtree/include/: blob.h  image.h  kernel.h  math.h  opengl.h
firtree/internal/: firtree-cogl-texture-sampler-intl.hh  firtree-engine-intl.hh  firtree-image-intl.hh  firtree-kernel-intl.hh  firtree-sampler-intl.hh  image-int.h  lru-cache.h  pbuffer.h  render-to-texture.h
firtree/linker/: CMakeLists.txt  canonicalize_sampler_calls.cc  canonicalize_sampler_calls.h  flat_image_sampler_provider.cc  kernel_image_sampler_provider.cpp  kernel_sampler_provider.cc  sampler_provider.cc
firtree/runtime/: CMakeLists.txt
glsl-frontend/: CMakeLists.txt  README.txt
glsl-frontend/OGLCompilersDLL/: CMakeLists.txt  Makefile
glsl-frontend/StandAlone/: CMakeLists.txt  Makefile  StandAlone.cpp  test.fknl
glsl-frontend/glslang/: CMakeLists.txt
kernel-parser/: CMakeLists.txt
kernel-parser/grammar/: grammar_crt.h
kernel-parser/slang/: slang_compile.c  slang_ir.c  slang_mem.c  slang_preprocess.c  slang_simplify.c
llvm-frontend/: CMakeLists.txt  builtins.h  compiler.cc  compiler.h  llvm-compiled-kernel.cc  llvm-compiled-kernel.h  llvm-emit-binop-arith.cc  llvm-emit-binop-assign.cc  llvm-emit-binop-cmp.cc  llvm-emit-binop-logic.cc  llvm-emit-constant.cc  llvm-emit-constant.h  llvm-emit-decl.cc  llvm-emit-decl.h  llvm-emit-expr-list.cc  llvm-emit-function-call.cc  llvm-emit-loop.cc  llvm-emit-negate.cc  llvm-emit-return.cc  llvm-emit-selection.cc  llvm-emit-swizzle.cc  llvm-emit-unary-incdec.cc  llvm-emit-variable-declaration.cc  llvm-emit-variable.cc  llvm-expression.cc  llvm-expression.h  llvm-frontend.cc  llvm-frontend.h  llvm-private.h  llvm-type-cast.cc  llvm-type-cast.h  llvm_compiled_kernel.cc  llvm_emit_binop_arith.cc  llvm_emit_binop_assign.cc  llvm_emit_binop_cmp.cc  llvm_emit_binop_logic.cc  llvm_emit_constant.cc  llvm_emit_constant.h  llvm_emit_decl.cc  llvm_emit_decl.h  (+20 more)
llvm-frontend/glsl-target/: CMakeLists.txt  glsl-target.cc  glsl-target.h
llvm-frontend/styx/: firtree.sty
llvm-frontend/styx-parser/: CMakeLists.txt  firtree.sty
llvm-frontend/test/: kernelcompile.cc  testkernel.knl
local-mesa/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  cmake_install.cmake
local-mesa/main/: get.c  mtypes.h
local-mesa/shader/: prog_print.c  prog_print.h  program.c  shader_api.c
testing/: CMakeLists.txt  TestModule.py  run_test_suite.py  test_harness.py  valgrind-gtk.supp  valgrind-misc.supp  valgrind-python.supp
testing/core/: affinetransform.py  buffersampler.py  cairosampler.py  cluttersampler.py  cpuengine.py  kernel.py  kernelargs.py  kernelsampler.py  pixbufsampler.py  reduce.py  sampler.py  utils.py
testing/tests/: test0000.py  test0001.py  test0002.py  test0003.py  test0004.py  test0005.py  test0006.py  test0007.py  test0008.py  test0009.py  test0010.py  test0011.py  test0012.py  test0013.py  test0014.py  test0015.py
tools/: CMakeLists.txt  bin2h.py  kernel2llvm.cc  kernelcompile.cc
(+188 files in other folders)
